refactoring category in post request, create findOfCreateCategories in saving post, create unit test for generator and sanitizer categories, a little bit fix double register unique email and username validation.
